--- a/simulado.html
+++ b/simulado.html
@@ -15,7 +15,7 @@
   <div id="quiz-container">
     <!-- As perguntas serão carregadas automaticamente a partir do arquivo JSON -->
   </div>
-
+  <p id="timer">Tempo restante: 30:00</p>
   <button id="submit-btn">Enviar respostas</button>
   <p id="result"></p>
 
