--- a/simulado.html
+++ b/simulado.html
@@ -8,16 +8,36 @@
   <script defer src="script.js"></script>
 </head>
 <body class="container">
+  <header class="header">
+    <h1>Simulado CEP V – Vasos Sanguíneos</h1>
+    <div id="timer" class="badge">⏱️ Tempo restante: 10:00</div>
+  </header>
 
-  <h1>Simulado CEP V – Vasos Sanguíneos</h1>
-  <p>Responda as questões abaixo e veja sua pontuação no final!</p>
+  <!-- Tela inicial -->
+  <section id="start-screen">
+    <p>O simulado apresenta <strong>uma questão por vez</strong>. Boa prova!</p>
+    <button id="start-btn" class="btn">Iniciar</button>
+  </section>
 
-  <div id="quiz-container">
-    <!-- As perguntas serão carregadas automaticamente a partir do arquivo JSON -->
-  </div>
-  <p id="timer">Tempo restante: 30:00</p>
-  <button id="submit-btn">Enviar respostas</button>
-  <p id="result"></p>
+  <!-- Área do quiz (1 questão por vez) -->
+  <section id="quiz" class="hidden">
+    <div id="progress" class="muted">Questão 1 de N</div>
+    <h2 id="question-text">…</h2>
+    <img id="question-image" alt="" class="hidden" />
+    <ul id="options" class="options"></ul>
+    <div class="actions">
+      <button id="prev-btn" class="btn outline">Anterior</button>
+      <button id="next-btn" class="btn">Próxima</button>
+      <button id="finish-btn" class="btn primary hidden">Finalizar</button>
+    </div>
+  </section>
 
+  <!-- Resultado -->
+  <section id="end-screen" class="hidden">
+    <h2>Resultado</h2>
+    <div id="score"></div>
+    <ol id="review"></ol>
+    <a class="btn outline" href="index.html">Voltar ao início</a>
+  </section>
 </body>
 </html>
