--- a/simulado.html
+++ b/simulado.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Simulado CEP V – Vasos Sanguíneos</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css?v=3">
   <!-- cache-buster pra garantir que pegue o JS novo -->
   <script defer src="script.js?v=3"></script>
 </head>
