--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Simulado CEP V – Vasos Sanguíneos</title>
+
+  <!-- Fonte Montserrat (mais confiável que @import) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Força baixar o CSS novo -->
+  <link rel="stylesheet" href="styles.css?v=4">
+</head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Simulado CEP V – Vasos Sanguíneos</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="container">
