--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simulado CEP V – Vasos Sanguíneos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simulado - CEP V - Mecanismos de Agressão e Defesa</title>
 
-  <!-- Fonte Montserrat (mais confiável que @import) -->
+  <!-- Fonte Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Força baixar o CSS novo -->
-  <link rel="stylesheet" href="styles.css?v=4">
+  <!-- Estilo principal -->
+  <link rel="stylesheet" href="styles.css?v=5">
 </head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simulado CEP V – Vasos Sanguíneos</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
+
 <body class="container">
-  <h1>Simulado CEP V – Vasos Sanguíneos</h1>
-  <p>Bem-vindo(a)! Escolha o modo de estudo abaixo.</p>
-  <nav class="menu">
-    <a class="btn" href="simulado.html">Simulado</a>
-  </nav>
-  <footer>© 2025 Simulado CEP V</footer>
+  <header class="header">
+    <h1>Simulado CEP V – Mecanismos de Agressão e Defesa</h1>
+  </header>
+
+  <main class="content">
+    <p>Bem-vindo(a)! Este simulado apresenta uma questão por vez.<br>Boa sorte!</p>
+    <nav class="menu">
+      <a href="simulado.html" class="btn">Iniciar Simulado</a>
+    </nav>
+  </main>
+
+  <footer class="footer">
+    © 2025 Medcelly
+  </footer>
 </body>
 </html>
