--- a/simulado.html
+++ b/simulado.html
@@ -28,7 +28,7 @@
 
   <!-- TELA INICIAL (aparece sozinha ao abrir) -->
   <section id="start-screen">
-    <p>O simulado apresenta <strong>uma questão por vez</strong>. Clique em <strong>Iniciar</strong> para começar.</p>
+    <p>O simulado apresenta <strong>uma questão por vez</strong>. Clique em <strong>Iniciar</strong> para o tempo começar a rodar.</p>
     <button id="start-btn" class="btn">Iniciar</button>
   </section>
 
