--- a/simulado.html
+++ b/simulado.html
@@ -3,41 +3,44 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simulado CEP V – Vasos Sanguíneos</title>
+  <title>Simulado | CEP V – Vasos Sanguíneos</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- cache-buster pra garantir que pegue o JS novo -->
-  <script defer src="script.js?v=3"></script>
 </head>
 <body class="container">
   <header class="header">
     <h1>Simulado CEP V – Vasos Sanguíneos</h1>
-    <div id="timer" class="badge">⏱️ Tempo restante: 10:00</div>
+    <div id="timer" class="badge">Tempo restante: 30:00</div>
   </header>
 
-  <!-- TELA INICIAL (aparece sozinha ao abrir) -->
+  <p>Teste seus conhecimentos com <strong>20 questões aleatórias</strong>.</p>
+
+  <!-- Tela inicial -->
   <section id="start-screen">
-    <p>O simulado apresenta <strong>uma questão por vez</strong>. Clique em <strong>Iniciar</strong> para começar.</p>
-    <button id="start-btn" class="btn">Iniciar</button>
+    <button id="start-btn" class="btn primary">Iniciar Simulado</button>
+    <p class="muted">Dica: você pode marcar uma alternativa e avançar; no final verá o gabarito completo.</p>
   </section>
 
-  <!-- QUIZ (fica oculto até clicar em Iniciar) -->
+  <!-- Área do quiz -->
   <section id="quiz" class="hidden">
-    <h2 id="question-text">...</h2>
-    <img id="question-image" alt="" class="hidden" />
+    <div id="progress" class="muted"></div>
+    <h2 id="question-text">Pergunta aqui…</h2>
     <ul id="options" class="options"></ul>
     <div class="actions">
-      <button id="prev-btn" class="btn outline">Anterior</button>
       <button id="next-btn" class="btn">Próxima</button>
-      <button id="finish-btn" class="btn primary hidden">Finalizar</button>
     </div>
   </section>
 
-  <!-- RESULTADO (só aparece no fim) -->
+  <!-- Tela final -->
   <section id="end-screen" class="hidden">
-    <h2>Resultado</h2>
+    <h2>Fim do Simulado</h2>
+    <p>Confira seu desempenho e o gabarito abaixo:</p>
     <div id="score"></div>
     <ol id="review"></ol>
     <a class="btn outline" href="index.html">Voltar ao início</a>
   </section>
+
+  <footer>© 2025 Simulado CEP V</footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
